--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,16 @@
 SECRET_KEY=
 DEBUG=True
 ALLOWED_HOSTS=*
-BOT_TOKEN=
+BOT_TOKEN=8139825196:AAGi7sLO5DUmQsEHM-1BZcuwHPvam-DRtk0
 
 # database
-DB_NAME=CryptoCunsershipBot
+DB_NAME=SendMessage
 DB_USER=postgres
 DB_PASSWORD=
 DB_HOST=localhost
 DB_PORT=5432
 
-# payment
-PAYMENT_TOKEN=
+
 
 # admin
 ADMIN=
